--- a/index.html
+++ b/index.html
@@ -5,6 +5,26 @@
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Vite + React + TS</title>
+    <style>
+      @font-face {
+        font-family: 'Baloo 2';
+        src: url('https://fonts.gstatic.com/s/baloo2/v26/4iCsj9Xj77bWBf8cGlF3HBk2pq6qHOyC1tcDAsDVRFsk1c.ttf') format('truetype');
+        font-weight: 400;
+        font-style: normal;
+      }
+      @font-face {
+        font-family: 'Nunito';
+        src: url('https://fonts.gstatic.com/s/nunito/v18/4iCsj9Xj77bWBf8cGlF3HBk2pq6qHOyC1tcDAsDVRFsk1c.ttf') format('truetype');
+        font-weight: 400;
+        font-style: normal;
+      }
+      @font-face {
+        font-family: 'Roboto';
+        src: url('https://fonts.gstatic.com/s/roboto/v27/4iCsj9Xj77bWBf8cGlF3HBk2pq6qHOyC1tcDAsDVRFsk1c.ttf') format('truetype');
+        font-weight: 400;
+        font-style: normal;
+      }
+    </style>
   </head>
   <body>
     <div id="root"></div>
